--- a/.github/workflows/prerelease-branches.yml
+++ b/.github/workflows/prerelease-branches.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
 
-      # Ensure baseline tag exists on main
+      # Ensure baseline tag exists on main so prerelease naming has an anchor
       - name: Bootstrap initial tag if none (on main)
         id: bootstrap
         run: |
@@ -33,10 +33,8 @@ jobs:
       - name: Prepare prerelease version
         id: ver
         run: |
-          # Base = latest tag (or v1.0.0)
           base="$(git describe --tags --abbrev=0 2>/dev/null || echo v1.0.0)"
           base="${base#v}"
-          # Pre-id = sanitized branch name
           pre="${GITHUB_REF_NAME//[^a-zA-Z0-9.-]/-}"
           echo "tag=v${base}-${pre}.${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
           echo "ver=${base}-${pre}.${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
